listar corretor e manutenção feitas

--- a/cadastro_imovel.css
+++ b/cadastro_imovel.css
@@ -117,6 +117,7 @@ a:hover i{
 /*  FORMULARIO */
 
 .container1{
+  margin-top: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
