--- a/cadaCada.css
+++ b/cadaCada.css
@@ -205,7 +205,18 @@
     padding: 10px;
     border-radius: 10px;
 }
-
+.lugar{
+  margin-top: -50px;
+  margin-left: 310px;
+  width: 10%;
+  text-align: center;
+  position: absolute;
+  color: #fff;
+  font-size: 20px;
+  background:  #28a745;
+  padding: 10px;
+  border-radius: 10px;
+}
 
 
 
